# rencher

./: .dockerignore  .gitignore  Dockerfile  README.md  SECURITY.md  build.py  build.yml  build_installer.nsi.in  com.github.danatationn.rencher.yml  freeze.py  main.py  meson.build  msys2-requirements.txt  nuitka-notes.md  pyproject.toml  python3-modules.json  rencher.py  requirements.txt  script.nsi  setup.py  win-requirements.txt
.github/workflows/: ci.yml  windows.yml
build-aux/: appimage.py  build_installer.nsi  freeze.py  gtk_freeze.py  install_deps.py
data/: AppRun  com.github.danatationn.Rencher.desktop.in  com.github.danatationn.Rencher.gresource.xml.in  com.github.danatationn.rencher.gresource.xml.in  com.github.danatationn.rencher.metainfo.xml  meson.build
data/ui/: import.blp  options.blp  settings.blp  tasks_popover.blp  tasks_row.blp  window.blp
rencher/: __init__.py  __init__.py.in  __main__.py  meson.build  rencher.in
rencher/data/resources/: wrench-wide-symbolic.symbolic.png~
rencher/data/ui/: import.blp  shortcuts.blp  tasks_row.blp
rencher/gtk/: README.md  __init__.py  _import.py  _library.py  application.py  codename_dialog.py  filemonitor.py  game_entry.py  game_item.py  import_dialog.py  library.py  options_dialog.py  rpc.py  settings_dialog.py  tasks.py  utils.py  window.py
rencher/gtk/res/: resources.gresource.xml
rencher/gtk/ui/: import.blp  options.blp  settings.blp  shortcuts.blp  shortcuts_deprecated.blp  tasks_popover.blp  tasks_row.blp  window.blp
rencher/renpy/: README.md  __init__.py  config.py  game.py  paths.py
src/: __init__.py
src/gtk/: README.md  __init__.py  _import.py  _library.py  application.py  codename_dialog.py  import_dialog.py  options_dialog.py  rimport.py  settings.py  settings_dialog.py  window.py
src/gtk/res/: resources.gresource.xml  windows.resources.gresource.xml
src/gtk/ui/: import.blp  import.ui  options.blp  options.ui  preferences.blp  settings.blp  settings.ui  test.blp  window.blp  window.ui
src/mods/: __init__.py  paths.py
src/qml/: main.qml
src/renpy/: README.md  __init__.py  _config.py  config.py  paths.py
src/tests/: rencher.ini  test_gameconfig.py
src/tui/: __init__.py  app.py  screens.py
src/tui/tcss/: entry.tcss  library.tcss
src/tui/widgets/: entry.py  main_pane.py  sidebar.py
