[project]
name = "Rencher"
version = "1.2.3"
description = "Play and mod Ren'Py games"
requires-python = ">=3.12"
dependencies = [
    "pycairo==1.27.0; sys.platform == 'linux'",
    "pygments>=2.20.0",
    "pygobject==3.50.0; sys.platform == 'linux'",
    "pypresence>=4.6.1",
    "rarfile>=4.2",
    "requests>=2.32.4",
    "rich>=14.3.3",
    "watchdog>=6.0.0",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["rencher"]

[tool.setuptools.packages.find]
where = ["."]
# so only modules get added
namespaces = false


[tool.pyright]
reportMissingModuleSource = false
reportUnusedCallResult = false
reportAny = false
reportExplicitAny = false
reportUnknownMemberType = false
reportMissingParameterType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportMissingTypeStubs = false

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "I",
]
extend-select = [
    "B",
    "COM",
]


[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[dependency-groups]
dev = [
    "pygobject-stubs>=2.13.0",
    "cx-freeze>=8.6.2; sys.platform == 'win32'",
    "flatpak-pip-generator>=26.3.11; sys.platform == 'linux'",
]

[tool.ruff.lint.flake8-implicit-str-concat]
allow-multiline = false
