### DESKTOP FILE ###
desktop = configure_file(
	input: app_id + '.desktop.in',
	output: app_id + '.desktop',
	configuration: conf,
	install: true,
	install_dir: join_paths(get_option('datadir'), 'applications'),
	install_mode: 'rwxr-xr-x'
)

### UI FILES ###
blueprint = custom_target('blueprint',
	input: files(
		'ui/import.blp',
		'ui/options.blp',
		'ui/settings.blp',
		'ui/shortcuts.blp',
		'ui/tasks_popover.blp',
		'ui/tasks_row.blp',
		'ui/window.blp'
	),
	output: '.',
	build_always_stale: true,
	build_by_default: true,
	command: [find_program('blueprint-compiler'), 'batch-compile', '@OUTPUT@', '@CURRENT_SOURCE_DIR@', '@INPUT@'],
)

### ICONS ###
icons = [
	['16x16', 'assets/rencher-icon16.png'],
	['32x32', 'assets/rencher-icon32.png'],
	['64x64', 'assets/rencher-icon64.png'],
	['128x128', 'assets/rencher-icon128.png'],
	['256x256', 'assets/rencher-icon256.png'],
	['512x512', 'assets/rencher-icon512.png'],
]
icon_name = '@0@.png'.format(conf.get('app_id'))

foreach icon : icons
	install_data(
		icon[1],
		install_dir: join_paths(
			get_option('datadir'),
			'icons/hicolor',
			icon[0],
			'apps'
		),
		rename: icon_name
	)
endforeach

### GRESOURCE ###
gnome.compile_resources(app_id,
	configure_file(
		input: app_id + '.gresource.xml.in',
		output: app_id + '.gresource.xml',
		configuration: conf
	),
	gresource_bundle: true,
	dependencies: blueprint,
	install: true,
	install_dir: pkgdata_dir
)
